styles/expanse.css
/* ... */
.attribute-header {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    /*background-color: firebrick;*/
    margin-bottom: 5px;
    height: 100%;
    width: 100%;
}

.attribute-row {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    width: 100%;
    height: 80px;
    margin: 5px 10px 5px 10px;
    border-bottom-right-radius: 10px;
    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, .6);
    background-color: #f3f3f3;
}

.attribute-box {
    display: flex;
    flex-direction: column;
    align-items: center;
    height: 100%;
    width: 100%;
}

.attribute-box input[type=text] {
    display: flex;
    margin: auto 0 auto 0;
    height: 50px;
    width: 50px;
    text-align: center;
    border: 2px solid #74bddc;
    border-top-left-radius: 10px;
    border-bottom-right-radius: 10px;
    font-family: 'Anton', sans-serif;
}

.attribute-negative input[type=text] {
    box-shadow: inset 0 0 10px #ff0000;
}

.box-header {
    display: flex;
    width: 100%;
    background-color: rgba(0, 0, 0, .9);
    height: 15px;
}

.box-header>span {
    display: flex;
    justify-content: center;
    align-self: center;
    width: 100%;
    font-size: 12px;
    color: whitesmoke;
    text-align: center;
    text-transform: uppercase;
}

/* Abilities */

.char-abilities {
    display: flex;
    flex-direction: column;
    background-color: green;
}

.age-abilities {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    height: 50px;
    width: calc(48% - 2px);
    margin: 0px 5px 10px 5px;
    padding: 0;
}

.ability-field {
    display: flex;
    flex-direction: column;
    width: 75%;
    background-color: #f3f3f3;
    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, .6);
    border-top-left-radius: 10px;
    border-bottom-right-radius: 10px;
}

.ability-name {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.ability-name>span {
    display: flex;
    justify-content: center;
    align-items: center;
    text-transform: uppercase;
    font-size: .8em;
    padding: 0 0 0 3px;
}

.ability-name input[type=checkbox] {
    height: 15px;
    width: 15px;
}

.ability-modifiers{
    display: flex;
    flex-direction: row;
}

.ability-penalty-box {
    display: flex;
    flex-direction: row;
    width: 100%;
    align-items: center;
    justify-content: flex-end;
}

.ability-penalty-box > span {
    font-size: .8em;
    text-transform: uppercase;
    align-items: center;
}

.ability-focus-box {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: flex-end;
    margin-left: 5px;
}

.ability-focus-box>span {
    font-size: .8em;
    text-transform: uppercase;
    align-items: center;
}

.age-abilities input[type=text] {
    display: flex;
    width: 100%;
    border: none;
    background-color: transparent;
    border-bottom-right-radius: 10px;
}

.age-abilities .age-focus {
    display: flex;
    Width: 100%;
    border: none;
    background-color: transparent;
    border-bottom-right-radius: 10px;
    /*padding: 0 5px;*/
    overflow: scroll;
    overflow-y: hidden;
    list-style:none;
    margin: 0px;
}

.hide-x {
    overflow-x: hidden;
}

.age-focus li {
    display: flex;
    background-color: #74bddc;
    text-transform:uppercase;
    height: 20px;
    border-radius: 10px;
    padding: 1px 10px !important;
    justify-content: space-between;
    margin-left: 5px;
    white-space: nowrap;
}

.age-focus li span {
    font-size: 12px;
}

.age-focus li span i.fas {
    padding-left: 5px;
}

.rating-box {
    display: flex;
    flex-direction: column;
    width: 22%;
    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, .6);
    justify-content: center;
    align-items: center;
    background-color: #f3f3f3;
    border-top-left-radius: 10px;
    border-bottom-right-radius: 10px;
}

.age-abilities input[type=number] {
    display: flex;
    text-align: center;
    height: 60%;
    border: none;
    border-top-left-radius: 10px;
    border-bottom-right-radius: 10px;
}

.ability-btn {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 75%;
    height: 40%;
    line-height: 10px;
    text-align: center;
    padding-top: 2px;
    background-image: linear-gradient(to bottom, #e4e4e4, #f7f7f7);
    border: 1px solid #afafaf;
    border-radius: 3px;
}

.sheet .attributes {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}

.conditions-box {
    display: flex;
    flex-direction: column;
    text-align: center;
    width: 100%;
    height: 130px;
    margin: 0px 5px 10px 5px;
    background-color: #f3f3f3;
    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, .6);
    border-bottom-right-radius: 10px;
}

.condition-container {
    display: flex;
    flex-direction: row;
    width: 100%;
    height: 100%;
    flex-wrap: wrap;
    justify-content: space-between;
}

.condition {
    display: flex;
    flex-direction: row;
    width: 28%;
    height: 18px;
    align-items: center;
}

.condition>span {
    display: flex;
    justify-content: center;
    align-items: center;
    text-transform: uppercase;
    font-size: .8em;
    padding: 0 0 0 3px;
}

.condition input[type=checkbox] {
    height: 15px;
    width: 15px;
}

input[type=checkbox] {
    height: 15px;
    width: 15px;
}

.item-controls {
    display: flex;
    flex-direction: column;
    justify-self: flex-end;
}

/**/

/* Focus */

.sheet .focuses-box {
    display: flex;
    flex-direction: column;
    text-align: center;
    min-height: 100px;
    width: 80%;
    margin: 0px 5px 10px 5px;
    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, .6);
    border-bottom-right-radius: 10px;
    background-color: #f3f3f3;
}

.focuses {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
    width: 100%;
    padding: 0 5px 0 5px;
}
/* ... */

